--- a/about.html
+++ b/about.html
@@ -173,10 +173,9 @@
 									<div class="slide">
 										<div class="key-block" style="margin-bottom:0px;">
 											<div class="inner-box box1">
-												<!-- <div class="icon-box big-icon-box"></div> -->
 												<div class="icon-box"></div>
 												<div class="content">
-													<h3 style="color:#bed533">2003年</h3>
+													<h3 style="color:rgba(191,215,50,1)">2003年</h3>
 													<div class="text">江森自控、延锋江森、博奥集团正式签定三方合资协议，成立合资公司重庆延锋江森。</div>
 												</div>
 											</div>
@@ -185,8 +184,8 @@
 											<div class="inner-box">
 												<div class="icon-box"></div>
 												<div class="content">
-													<h3 style="color:#bed533">2004年</h3>
-													<div class="text">搬迁至渝北工厂，第一个项目福特CD132正式投产</div>
+													<h3 style="color:rgba(191,215,50,1)">2004年</h3>
+													<div class="text">搬迁至渝北工厂，第一个项目福特CD132正式投产。</div>
 												</div>
 											</div>
 										</div>
@@ -194,8 +193,8 @@
 											<div class="inner-box">
 												<div class="icon-box"></div>
 												<div class="content">
-													<h3 style="color:#bed533">2006年</h3>
-													<div class="text">铃木工区正式投产，重庆延锋江森荣获“重庆市高新技术企业称号”</div>
+													<h3 style="color:rgba(191,215,50,1)">2006年</h3>
+													<div class="text">铃木工区正式投产，重庆延锋江森荣获“重庆市高新技术企业称号”。</div>
 												</div>
 											</div>
 										</div>
@@ -203,8 +202,17 @@
 											<div class="inner-box">
 												<div class="icon-box"></div>
 												<div class="content">
-													<h3 style="color:#bed533">2007年</h3>
-													<div class="text">举办第一届家属日活动，启动公益项目蓝天计划</div>
+													<h3 style="color:rgba(191,215,50,1)">2007年</h3>
+													<div class="text">举办第一届家属日活动，启动公益项目蓝天计划。</div>
+												</div>
+											</div>
+										</div>
+										<div class="key-block" style="margin-bottom:0px">
+											<div class="inner-box">
+												<div class="icon-box"></div>
+												<div class="content">
+													<h3 style="color:rgba(191,215,50,1)">2010年</h3>
+													<div class="text">公司年销售额首次突破10亿元，技术中心获得第一项技术专利。</div>
 												</div>
 											</div>
 										</div>
@@ -215,8 +223,8 @@
 											<div class="inner-box">
 												<div class="icon-box"></div>
 												<div class="content">
-													<h3 style="color:#bed533">2010年</h3>
-													<div class="text">公司年销售额首次突破10亿元，技术中心获得第一项技术专利</div>
+													<h3 style="color:rgba(191,215,50,1)">2011年</h3>
+													<div class="text">公司完成第一次组织变革，建立以客户为中心的平台业务单元。</div>
 												</div>
 											</div>
 										</div>
@@ -224,17 +232,8 @@
 											<div class="inner-box">
 												<div class="icon-box"></div>
 												<div class="content">
-													<h3 style="color:#bed533">2011年</h3>
-													<div class="text">公司完成第一次组织变革，建立以客户为中心的平台业务单元</div>
-												</div>
-											</div>
-										</div>
-										<div class="key-block" style="margin-bottom:0px">
-											<div class="inner-box">
-												<div class="icon-box"></div>
-												<div class="content">
-													<h3 style="color:#bed533">2012年</h3>
-													<div class="text">福特福克斯项目顺利投产，公司发展迎来里程碑事件</div>
+													<h3 style="color:rgba(191,215,50,1)">2012年</h3>
+													<div class="text">福特福克斯项目顺利投产，公司发展迎来里程碑事件。</div>
 												</div>
 											</div>
 										</div>
@@ -242,20 +241,37 @@
 											<div class="inner-box">
 												<div class="icon-box"></div>
 												<div class="content">
-													<h3 style="color:#bed533">2013年</h3>
-													<div class="text">成立深圳分公司、成都子公司，快速布局全国</div>
+													<h3 style="color:rgba(191,215,50,1)">2013年</h3>
+													<div class="text">成立深圳分公司、成都子公司，快速布局全国。</div>
+												</div>
+											</div>
+										</div>
+										<div class="key-block" style="margin-bottom:0px">
+											<div class="inner-box">
+												<div class="icon-box"></div>
+												<div class="content">
+													<h3 style="color:rgba(191,215,50,1)">2014年</h3>
+													<div class="text">为满足业务发展需要，成立大庆、南昌、杭州子公司，重庆总部新办公大楼及黄茅坪工厂正式启用。</div>
+												</div>
+											</div>
+										</div>
+										<div class="key-block" style="margin-bottom:0px">
+											<div class="inner-box">
+												<div class="icon-box"></div>
+												<div class="content">
+													<h3 style="color:rgba(191,215,50,1)">2015年</h3>
+													<div class="text">成立锋奥子公司，柳州工厂正式投产，公司正式挂牌成为JCI全球认证的全功能技术研发中心。</div>
 												</div>
 											</div>
 										</div>
 									</div>
-									
 									<div class="slide">
 										<div class="key-block" style="margin-bottom:0px">
 											<div class="inner-box">
 												<div class="icon-box"></div>
 												<div class="content">
-													<h3 style="color:#bed533">2014年</h3>
-													<div class="text">为满足业务发展需要，成立大庆、南昌、杭州子公司，重庆总部新办公大楼及黄茅坪工厂正式启用</div>
+													<h3 style="color:rgba(191,215,50,1)">2016年</h3>
+													<div class="text">年销售额突破40亿大关，财务表现取得重大突破，成立哈尔滨子公司，重庆延锋江森正式更名为重庆延锋安道拓汽车部件系统有限公司。</div>
 												</div>
 											</div>
 										</div>
@@ -263,8 +279,8 @@
 											<div class="inner-box">
 												<div class="icon-box"></div>
 												<div class="content">
-													<h3 style="color:#bed533">2015年</h3>
-													<div class="text">成立锋奥子公司，柳州工厂正式投产，公司正式挂牌成为JCI全球认证的全功能技术研发中心</div>
+													<h3 style="color:rgba(191,215,50,1)">2017年</h3>
+													<div class="text">年产量首次突破100万套，实现可持续健康成长，举行《文化的力量》新书发布会，启动全国分子公司新书路演。</div>
 												</div>
 											</div>
 										</div>
@@ -272,8 +288,8 @@
 											<div class="inner-box">
 												<div class="icon-box"></div>
 												<div class="content">
-													<h3 style="color:#bed533">2016年</h3>
-													<div class="text">年销售额突破40亿大关，财务表现取得重大突破，成立哈尔滨子公司，重庆延锋江森正式更名为重庆延锋安道拓汽车部件系统有限公司</div>
+													<h3 style="color:rgba(191,215,50,1)">2018年</h3>
+													<div class="text">公司成立15周年，发布企业人物形象“艾小渝”，启动线上文创店“艾小渝的未来工厂”。</div>
 												</div>
 											</div>
 										</div>
@@ -281,20 +297,20 @@
 											<div class="inner-box">
 												<div class="icon-box"></div>
 												<div class="content">
-													<h3 style="color:#bed533">2017年</h3>
-													<div class="text">年产量首次突破100万套，实现可持续健康成长，举行《文化的力量》新书发布会，启动全国分子公司新书路演</div>
+													<h3 style="color:rgba(191,215,50,1)">2019年</h3>
+													<div class="text">……</div>
 												</div>
 											</div>
 										</div>
-										<div class="key-block" style="margin-bottom:0px">
-												<div class="inner-box">
-													<div class="icon-box"></div>
-													<div class="content">
-														<h3 style="color:#bed533">2018年</h3>
-														<div class="text">公司成立15周年，发布企业人物形象“艾小渝”，启动线上文创店“艾小渝的未来工厂”</div>
-													</div>
+										<div class="key-block" style="margin-bottom:0px;visibility: hidden;">
+											<div class="inner-box">
+												<div class="icon-box"></div>
+												<div class="content">
+													<h3 style="color:rgba(191,215,50,1)">2020年</h3>
+													<div class="text">……</div>
 												</div>
 											</div>
+										</div>
 									</div>
 								</div>
 							</div>
@@ -305,7 +321,7 @@
 			<div id="map" class="swiper-slide slide4">
 				<div class="china-map">
 						<img class="img-map" src="images/background/map_black_bg.png">
-						<div class="region-list active postition-1 online-node" data-type="成都大门" data-img="images/about/cd.png">
+						<div class="region-list active postition-1 online-node" data-type="成都延锋安道拓汽车部件系统有限公司" data-img="images/about/cd.png">
 							<div class="area-box">
 								<span class="dot"></span>
 								<span class="pulse delay-06"></span>
@@ -321,59 +337,59 @@
 							</div>
 							<div class="show-regin"><span>重庆</span></div>
 						</div>
-						<div class="region-list color1 postition-2-1 online-node" data-type="重庆江津" data-img="images/about/cq-jj.png">
+						<div class="region-list color1 postition-2-1 online-node" data-type="6.重庆延锋安道拓汽车部件系统有限公司江津分公司" data-img="images/about/cq-jj.png">
 							<div class="area-box"><span class="dot"></span><span class="pulse delay-06"></span>
 								<span class="pulse delay-05"></span>
 								<span class="pulse delay-04"></span>
 							</div>
 							<div class="show-regin"></div>
 						</div>
-						<div class="region-list color1 postition-2-2 online-node" data-type="重庆鱼嘴大门" data-img="images/about/cq-yj.png">
+						<div class="region-list color1 postition-2-2 online-node" data-type="重庆延锋安道拓锋奥汽车部件系统有限公司" data-img="images/about/cq-yj.png">
 							<div class="area-box"><span class="dot"></span><span class="pulse delay-06"></span>
 								<span class="pulse delay-05"></span>
 								<span class="pulse delay-04"></span>
 							</div>
 							<div class="show-regin"></div>
 						</div>
-						<div class="region-list active postition-3 online-node" data-type="南昌工厂" data-img="images/about/nc.png">
+						<div class="region-list active postition-3 online-node" data-type="5.南昌延锋安道拓汽车部件系统有限公司" data-img="images/about/nc.png">
 							<div class="area-box"><span class="dot"></span><span class="pulse delay-06"></span>
 								<span class="pulse delay-05"></span>
 								<span class="pulse delay-04"></span>
 							</div>
 							<div class="show-regin"><span>南昌</span></div>
 						</div>
-						<div class="region-list waite postition-4 waite-node" data-type="东莞大门" data-img="images/about/dg.png">
+						<div class="region-list waite postition-4 waite-node" data-type="重庆延锋安道拓汽车部件系统有限公司东莞分公司" data-img="images/about/dg.png">
 							<div class="area-box"><span class="dot"></span>
 								<span class="pulse delay-01"></span>
 								<span class="pulse delay-02"></span>
 								</div>
 							<div class="show-regin"><span>东莞</span></div>
 						</div>
-						<div class="region-list waite postition-5 waite-node" data-type="台州工厂" data-img="images/about/tz.png">
+						<div class="region-list waite postition-5 waite-node" data-type="台州延锋安道拓汽车部件系统有限公司" data-img="images/about/tz.png">
 							<div class="area-box"><span class="dot"></span><span class="pulse delay-01"></span>
 								<span class="pulse delay-02"></span>
 								</div>
 							<div class="show-regin"><span>台州</span></div>
 						</div>
-							<div class="region-list active postition-6 online-node" data-type="杭州大门" data-img="images/about/hz.png">
+							<div class="region-list active postition-6 online-node" data-type="杭州延锋安道拓汽车部件系统有限公司" data-img="images/about/hz.png">
 							<div class="area-box"><span class="dot"></span><span class="pulse delay-06"></span>
 								<span class="pulse delay-05"></span>
 								<span class="pulse delay-04"></span></div>
 							<div class="show-regin"><span>杭州</span></div>
 						</div>
-						<div class="region-list active postition-7 online-node" data-type="哈尔滨大门" data-img="images/about/heb.png">
+						<div class="region-list active postition-7 online-node" data-type="哈尔滨延锋安道拓汽车部件系统有限公司" data-img="images/about/heb.png">
 							<div class="area-box"><span class="dot"></span><span class="pulse delay-04"></span>
 								<span class="pulse delay-05"></span>
 								<span class="pulse delay-03"></span></div>
 							<div class="show-regin"><span>哈尔滨</span></div>
 						</div>
-						<div class="region-list  active  postition-8 online-node" data-type="大庆大门" data-img="images/about/dq.png">
+						<div class="region-list  active  postition-8 online-node" data-type="大庆延锋安道拓汽车部件系统有限公司" data-img="images/about/dq.png">
 							<div class="area-box"><span class="dot"></span><span class="pulse delay-06"></span>
 								<span class="pulse delay-05"></span>
 								<span class="pulse delay-04"></span></div>
 							<div class="show-regin"><span>大庆</span></div>
 						</div>
-						<div class="region-list  active  postition-9 online-node" data-type="湘潭工厂" data-img="images/about/xt.png">
+						<div class="region-list  active  postition-9 online-node" data-type="湘潭延锋安道拓汽车部件系统有限公司" data-img="images/about/xt.png">
 							<div class="area-box"><span class="dot"></span><span class="pulse delay-06"></span>
 								<span class="pulse delay-05"></span>
 								<span class="pulse delay-04"></span></div>
