--- a/culture.html
+++ b/culture.html
@@ -70,7 +70,7 @@
             <!-- <div class="slide" style="background-image:url(images/main-slider/image-5.jpg);">
                 <div class="auto-container">
                 	<div class="content text-right">
-						<h2 style="font-size:38px;font-weight:normal; margin-top:90px"><span style="font-weight:bold; color:#bed533;padding:10px 100px">&nbsp;</span></h2>
+						<h2 style="font-size:38px;font-weight:normal; margin-top:90px"><span style="font-weight:bold; color:rgba(191,215,50,1);padding:10px 100px">&nbsp;</span></h2>
 						<h3 style="color:#0a6c80; margin:30px 0">&nbsp;</h3>
                     	<div class="text" style="font-size:14px; color:#333333">&nbsp;
 						</div>
@@ -81,7 +81,7 @@
 				<img src="images/main-slider/image-5.jpg">
 				<!-- <div class="content-box">
 					<div class="content text-center">
-						<h3><span>提升机动化世界<font style="color:#bed533">的体验</font></span></h3>
+						<h3><span>提升机动化世界<font style="color:rgba(191,215,50,1)">的体验</font></span></h3>
 						<div class="link-box">&nbsp;</div>
 					</div>
 				</div> -->
