--- a/news.html
+++ b/news.html
@@ -27,7 +27,7 @@
 <!--[if lt IE 9]><script src="js/respond.js"></script><![endif]-->
 <style type="text/css">
 .self-color1{
-    color: #2d758c;
+    color: rgba(15,113,142,1);;
 }
 .page-wrapper{
     height: auto;
