--- a/profession.html
+++ b/profession.html
@@ -35,7 +35,7 @@
 }
 .content-box .text1 span{
 	font-weight: bold;
-    color: #bed533;
+    color: rgba(191,215,50,1);
     background: rgba(4,69,87,0.8);
     padding: 0.2rem 0.8rem;
 }
@@ -89,7 +89,7 @@
             <!-- <div class="slide" style="background-image:url(images/main-slider/image-4.jpg)">
                 <div class="auto-container">
                 	<div class="content text-right">
-						<h2 style="font-size:38px;font-weight:normal; margin-top:90px"><span style="font-weight:bold; color:#bed533; background:rgba(4,69,87,0.8);  padding:10px 40px">员工发展</span></h2>
+						<h2 style="font-size:38px;font-weight:normal; margin-top:90px"><span style="font-weight:bold; color:rgba(191,215,50,1); background:rgba(4,69,87,0.8);  padding:10px 40px">员工发展</span></h2>
 						<h3 style="color:#0a6c80; margin:30px 0">打造一个没有天花板的舞台</h3>
                     	<div class="text" style="font-size:14px; color:#333333">我们期望为人才的成长与发展提供良好的土壤和广阔的平台，在注重企业<br>自身不断发展的同时，我们重视每一位员工以及用于培养他们的资源投入。<br>我们倡导：
 员工是自己职业发展的主导者，直接主管是员工的教练，人力资源工作者<br>是支持者和内部顾问。
