--- a/technology.html
+++ b/technology.html
@@ -37,10 +37,10 @@
 	display: none;
 }
 .text-color1{
-	color: #093947;
+	color: rgba(0,70,91,1);
 }
 .text-color2{
-	color: #bed533;
+	color: rgba(191,215,50,1);
 }
 .text-color3{
 	color: #333;
@@ -105,7 +105,7 @@
 	display: none;
 }
 .slide2 .left-box{
-	color: #bed533;
+	color: rgba(191,215,50,1);
 	position: relative;
 }
 .slide2 .left-box .img_play{
@@ -256,7 +256,7 @@
 .slide5 .content1 .cont1>span,
 .slide6 .cont1>span{
 	display: inline-block;
-	border-bottom: 2px solid #bed533;
+	border-bottom: 2px solid rgba(191,215,50,1);
 	padding-bottom: 10px;
 }
 .slide5 .content1 .cont2{
@@ -293,7 +293,7 @@
 .slide5 .content2 .box1 .cont1{
 	font-size: 16px;
 	font-weight: 600;
-	border-bottom: 2px solid #bed533;
+	border-bottom: 2px solid rgba(191,215,50,1);
 }
 .slide6>.content-box{
 	/* display: flex; */
@@ -310,7 +310,7 @@
 }
 .slide6 .column-box{
 	padding: 5px;
-	background: #bed533;
+	background: rgba(191,215,50,1);
 	max-width: 1530px;
 	margin-top: 25px;
 }
@@ -327,8 +327,7 @@
 }
 .slide6 .column-4 .content-box{
 	background: rgba(190, 213, 51, 0.8);
-	color: #093947;
-	/* display: flex; */
+	color: rgba(0,70,91,1);
     justify-content: center;
 	align-items: center;
 	font-size: 18px;
@@ -363,7 +362,7 @@
 							<h3 class="text1 animated ani-time2" data-my-animate="fadeInRight">创新研发</h3>
 							<h3 class="text2 animated ani-time3" data-my-animate="fadeInRight">
 								<span>超级座椅</span><br>
-								<span style="font-weight:bold; color:#bed533">面向未来的座椅</span>
+								<span style="font-weight:bold; color:rgba(191,215,50,1)">面向未来的座椅</span>
 							</h2>
 					</div>
 				</div>
@@ -485,9 +484,9 @@
 					<div class="column-box column-5 animated" data-my-animate="fadeInLeft">
 						<div class="item-box 11" data-bigImg="5-1-big.png">
 							<img src="images/technology/5-1.jpg">
-							<div class="content-box box1">
+							<!-- <div class="content-box box1">
 								<div class="cont1 text-color4">对标室</div>
-							</div>
+							</div> -->
 						</div>
 						<div class="item-box 22" data-bigImg="5-2-big.png">
 							<img src="images/technology/5-2.jpg">
