--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 	margin-bottom: 1.25rem;
 }
 .business-box .count-text{
-	color: #bed533;
+	color: rgba(191,215,50,1);
     font-size: 1.875rem;
 }
 .business-box .counter-title{
@@ -69,7 +69,7 @@
 		font-size: 1.25rem;
 	}
 	.business-box .count-text{
-		color: #bed533;
+		color: rgba(191,215,50,1);
 		font-size: 1.125rem;
 	}
 	.business-box .counter-title{
@@ -229,7 +229,7 @@
 								<div class="content text-center">
 									<h2><div class="my-color2">提升机动化世界</div><font>的体验</font></h2>
 								</div>
-								<div class="my-row-center news-center">新闻中心</div>
+								<a href="news.html" class="my-color1"><div class="my-row-center news-center">新闻中心</div></a>
 							</div>
 						</div>
 					</div>
