--- a/common/header.html
+++ b/common/header.html
@@ -105,12 +105,6 @@
 					
 					<div class="navbar-collapse collapse clearfix" id="navbarSupportedContent1">
 						<ul class="navigation clearfix">
-							<!-- <li class="current"><a href="index.html">首页</a></li>
-							<li><a href="product.html">产品中心</a></li>
-							<li><a href="technology.html">技术能力</a></li>
-							<li><a href="profession.html">职业前景</a></li>
-							<li><a href="culture.html">企业文化</a></li>
-							<li><a href="about.html">关于我们</a></li>					 -->
 							<li class="dropdown"  data-type="index">
 									<a href="index.html">首页</a>
 								</li>
@@ -164,6 +158,10 @@
 										<li><a href="about.html?item=4">全国布局</a></li>
 										<li><a href="about.html?item=5">合作伙伴</a></li>
 									</ul>
+								</li>
+								<li class="language-box">
+									<span class="language active" type="ch">中</span>
+									<span class="language" type="en">EN</span>
 								</li>
 						</ul>
 					</div>
